# pid-fan-controller

./: Cargo.toml  Makefile  README.md  example_fan_settings.json  flake.nix  package.nix  settings.nix  shell.nix
resources/: pid-fan-controller-sleep.service  pid-fan-controller.service
src/: main.rs  pid.rs
