[package]
name = "pid-fan-controller"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
glob = "0.3"
serde = { version ="1.0", features= ["serde_derive"], default-features= false }
serde_json = "1.0"

[profile.dev]
codegen-units=1
lto = true

[profile.release]
codegen-units=1
lto = true
strip = true
panic = 'abort'
